# coderabbit-toy

./: .gitignore  README.md  pyproject.toml
scenarios/: 01_sanitizer_regression.patch  02_metrics_drift.patch  03_docs_noise.patch
src/coderabbit_toy/: __init__.py  report.py  sanitizer.py
tests/: test_report.py  test_sanitizer.py
