[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coderabbit-toy"
version = "0.1.0"
description = "Toy repository to exercise CodeRabbit review features."
authors = [{name = "CodeRabbit Tester", email = "tester@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]

